force-app/main/default/objects/ServiceNowIncidentSettings__c/ServiceNowIncidentSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is used to manage integration between Salesforce and ServiceNow. Create record name as &quot;Default&quot; and enter the required values for it.</description>
    <label>ServiceNow Incident Settings</label>
</CustomObject>