force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Default Account Id for legacy CRS integration cases with IHG</inlineHelpText>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>