force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/Attachment_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Endpoint__c</fullName>
    <description>URL of the attachment endpoint.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL of the attachment endpoint.</inlineHelpText>
    <label>Attachment Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>