force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/ImportSet_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>ImportSet_Endpoint__c</fullName>
    <description>Import set endpoint of the Servicenow instance.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Import set endpoint of the Servicenow instance.</inlineHelpText>
    <label>ImportSet Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>