force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/Incident_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Incident_Endpoint__c</fullName>
    <description>URL for the incident endpoint of the Servicenow</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL for the incident endpoint of the Servicenow</inlineHelpText>
    <label>Incident Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>