force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/Integration_UserId__c.field-meta.xml
<CustomField>
    <fullName>Integration_UserId__c</fullName>
    <description>Integration user record Id e.g. 00517000001YWXyAAO</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Integration user record Id e.g. 00517000001YWXyAAO</inlineHelpText>
    <label>Integration UserId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>