force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/Integration_Username__c.field-meta.xml
<CustomField>
    <fullName>Integration_Username__c</fullName>
    <description>Salesforce username of the ServiceNow integration user, we do not need to send the information back to ServiceNow because the insert or update came from ServiceNow</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Integration username in Salesforce Org e.g. ihg_servicenow@newmarketinc.com.winaproach</inlineHelpText>
    <label>Integration Username</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>