force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/Resend_Failed_Message_Interval__c.field-meta.xml
<CustomField>
    <fullName>Resend_Failed_Message_Interval__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Re-sending Failed Message Interval (in Min). Resend failed message to ServiceNow server. e.g. after every 10 minutes.</description>
    <inlineHelpText>Re-sending Failed Message Interval (in Min). Resend failed message to ServiceNow server. e.g. after every 10 minutes.</inlineHelpText>
    <label>Resend Failed Message Interval (in Min)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>