force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/SerrviceNow_Username__c.field-meta.xml
<CustomField>
    <fullName>SerrviceNow_Username__c</fullName>
    <description>Servicenow username used for communication from Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Servicenow username used for communication from Salesforce.</inlineHelpText>
    <label>SerrviceNow Username</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>