force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/ServiceNow_Incident_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ServiceNow_Incident_Case_Record_Type__c</fullName>
    <defaultValue>&apos;CRS Incident&apos;</defaultValue>
    <description>Case Record Type that will be used in the integration with Servicenow. e.g. CRS Incident</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Case Record Type that will be used in the integration with Servicenow. e.g. CRS Incident</inlineHelpText>
    <label>ServiceNow Incident Case Record Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>