force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/ServiceNow_Password__c.field-meta.xml
<CustomField>
    <fullName>ServiceNow_Password__c</fullName>
    <description>Password used to communicate with ServiceNow server.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Password used to communicate with ServiceNow server.</inlineHelpText>
    <label>ServiceNow Password</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>