force-app/main/default/objects/ServiceNowIncidentSettings__c/fields/Winaproach_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Winaproach_AccountId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Account Id that is in the Win@proach system for IHG</inlineHelpText>
    <label>Win@proach Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>